# labs_theory

./: README.md
lab01-docker-tutorial-for-beginners/MYSITE/: .gitignore  docker-compose.yml
lab01-docker-tutorial-for-beginners/MYSITE/backend/: Dockerfile  pyproject.toml  requirements.txt
lab01-docker-tutorial-for-beginners/MYSITE/backend/src/mysite/: main.py
lab01-docker-tutorial-for-beginners/MYSITE/frontend/: Dockerfile
lab01-docker-tutorial-for-beginners/MYSITE/frontend/static/: index.html
